Icon alignment fix

--- a/src/assets/styles/utils/helper.scss
+++ b/src/assets/styles/utils/helper.scss
@@ -48,7 +48,7 @@
             }
         }
         .label{
-            
+            display: flex;
         }
     }
 }
